--- a/departments/cse/faculty.html
+++ b/departments/cse/faculty.html
@@ -115,18 +115,18 @@
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Departments</a>
-                  <ul style="width:320px" class="sub-menu">
-                    <li><a href="../../departments/aa/home.html">Architectural Assistantship</a></li>
-                    <li><a href="../../departments/ce/home.html">Civil Engineering</a></li>
-                    <li><a href="../../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
-                    <li><a href="../../departments/ee/home.html">Electrical Engineering</a></li>
-                    <li><a href="../../departments/ece/home.html">Electronics & Communications Engg</a></li>
-                    <li><a href="../../departments/it/home.html">Information Technology</a></li>
-                    <li><a href="../../departments/me/home.html">Mechanical Engineering</a></li>
-                    <li><a href="../../departments/pie/home.html">Production and Industrial Engineering</a></li>
-                    <li><a href="../../departments/pharmacy/home.html">Pharmacy</a></li>
-                    <li><a href="../../departments/applied/home.html">Applied Sciences</a></li>
-                    <li><a href="../../departments/workshop/home.html">Workshop</a></li>
+                  <ul style="width:420px" class="sub-menu">
+                    <li><a href="../aa/home.html">Architectural Assistantship</a></li>
+                    <li><a href="../ce/home.html">Civil Engineering</a></li>
+                    <li><a href="../cse/home.html">Computer Science &amp; Engineering</a></li>
+                    <li><a href="../ee/home.html">Electrical Engineering</a></li>
+                    <li><a href="../ece/home.html">Electronics & Communications Engg</a></li>
+                    <li><a href="../it/home.html">Information Technology</a></li>
+                    <li><a href="../me/home.html">Mechanical Engineering</a></li>
+                    <li><a href="../pie/home.html">Mechanical Engineering (Production)</a></li>
+                    <li><a href="../pharmacy/home.html">Pharmacy</a></li>
+                    <li><a href="../applied/home.html">Applied Sciences</a></li>
+                    <li><a href="../workshop/home.html">Workshop</a></li>
                   </ul>
                 </li>
                 <li class="has-sub"> 
@@ -208,8 +208,38 @@
                   </div> -->
                 </div>
                 <div class="down-content">
-                    <h4 class="dept-block">Faculty &amp;Non Teaching Members</h4>
+                    <h4 class="dept-block">Faculty Members</h4>
                     <div class="faculty-profile">
+                      <div class="flip-card">
+                        <div class="flip-card-inner">
+                          <div class="flip-card-front">
+                            <img src="../../assets/images/faculty/darshan.jpg" alt="Avatar">
+                            <h3>Er. Darshan Singh Dhillon</h3>
+                            <h5 style="color:white;">Head of Department</h5>
+                          </div>
+                          <div class="flip-card-back">
+                            <div class="qualification">
+                                <h3>
+                                    Qualification
+                                </h3><br/>
+                                <h5 style="color:white;">B.Tech.<br/>
+                                  M.Tech.</h5>
+                            </div>
+                            <div class="specialization-area">
+                                <h3>
+                                    Specialization Area
+                                </h3><br/>
+                                <h5 style="color:white;">Microprocessor</h5>
+                            </div>
+                            <div class="contact">
+                                <a href="mailto:darshansingh.dhillon@punjab.gov.in">
+                                    <img src="../../assets/images/email.svg" alt="" 
+                                    srcset="">
+                                </a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                       <!--<div class="flip-card">
                         <div class="flip-card-inner">
                           <div class="flip-card-front">
@@ -245,7 +275,7 @@
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/sushil.jpg" alt="Avatar">
                                 <h3>Dr. Sushil Kumar</h3>
-                                <h5 style="color:white;">Head of Department</h5>
+                                <h5 style="color:white;">System Manager</h5>
                               </div>
                               <div class="flip-card-back">
                                 <div class="qualification">
@@ -273,8 +303,8 @@
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
-                                <img src="../../assets/images/faculty/beant.jpg" alt="Avatar">
-                                <h3>Er. Beant Singh</h3>
+                                <img src="../../assets/images/faculty/soni.jpg" alt="Avatar">
+                                <h3>Er. Lakhvinder Soni</h3>
                                 <h5 style="color:white;">Lecturer</h5>
                               </div>
                               <div class="flip-card-back">
@@ -282,7 +312,7 @@
                                     <h3>
                                         Qualification
                                     </h3><br/>
-                                    <h5 style="color:white;">B.Tech.</h5>
+                                    <h5 style="color:white;">M.Tech.<br/>B.Tech.</h5>
                                 </div>
                                 <div class="specialization-area">
                                     <h3>
@@ -302,8 +332,8 @@
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
-                                <img src="../../assets/images/faculty/sukhpal.jpg" alt="Avatar">
-                                <h3>Dr. Sukhpal Kaur</h3>
+                                <img src="../../assets/images/faculty/beant.jpg" alt="Avatar">
+                                <h3>Er. Beant Singh</h3>
                                 <h5 style="color:white;">Lecturer</h5>
                               </div>
                               <div class="flip-card-back">
@@ -311,17 +341,16 @@
                                     <h3>
                                         Qualification
                                     </h3><br/>
-                                    <h5 style="color:white;">B.Tech.<br/>
-                                    M.Tech.<br/>PhD</h5>
+                                    <h5 style="color:white;">M.Tech.<br/>B.Tech.</h5>
                                 </div>
                                 <div class="specialization-area">
                                     <h3>
                                         Specialization Area
                                     </h3><br/>
-                                    <h5 style="color:white;">Machine Learning</h5>
+                                    <h5 style="color:white;">Object Oriented Programming</h5>
                                 </div>
                                 <div class="contact">
-                                    <a href="mailto:sukhpal.dhillion@punjab.gov.in">
+                                    <a href="mailto:beant.singh1992@punjab.gov.in">
                                         <img src="../../assets/images/email.svg" alt="" 
                                         srcset="">
                                     </a>
@@ -329,8 +358,39 @@
                               </div>
                             </div>
                           </div>
+                          
                     </div>
                     <div class="faculty-profile">
+                      <div class="flip-card">
+                        <div class="flip-card-inner">
+                          <div class="flip-card-front">
+                            <img src="../../assets/images/faculty/sukhpal.jpg" alt="Avatar">
+                            <h3>Dr. Sukhpal Kaur</h3>
+                            <h5 style="color:white;">Lecturer</h5>
+                          </div>
+                          <div class="flip-card-back">
+                            <div class="qualification">
+                                <h3>
+                                    Qualification
+                                </h3><br/>
+                                <h5 style="color:white;">B.Tech.<br/>
+                                M.Tech.<br/>PhD</h5>
+                            </div>
+                            <div class="specialization-area">
+                                <h3>
+                                    Specialization Area
+                                </h3><br/>
+                                <h5 style="color:white;">Machine Learning</h5>
+                            </div>
+                            <div class="contact">
+                                <a href="mailto:sukhpal.dhillion@punjab.gov.in">
+                                    <img src="../../assets/images/email.svg" alt="" 
+                                    srcset="">
+                                </a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                         <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
