--- a/departments/ece/home.html
+++ b/departments/ece/home.html
@@ -115,18 +115,18 @@
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Departments</a>
-                  <ul style="width:320px" class="sub-menu">
-                    <li><a href="../../departments/aa/home.html">Architectural Assistantship</a></li>
-                    <li><a href="../../departments/ce/home.html">Civil Engineering</a></li>
-                    <li><a href="../../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
-                    <li><a href="../../departments/ee/home.html">Electrical Engineering</a></li>
-                    <li><a href="../../departments/ece/home.html">Electronics & Communications Engg</a></li>
-                    <li><a href="../../departments/it/home.html">Information Technology</a></li>
-                    <li><a href="../../departments/me/home.html">Mechanical Engineering</a></li>
-                    <li><a href="../../departments/pie/home.html">Production and Industrial Engineering</a></li>
-                    <li><a href="../../departments/pharmacy/home.html">Pharmacy</a></li>
-                    <li><a href="../../departments/applied/home.html">Applied Sciences</a></li>
-                    <li><a href="../../departments/workshop/home.html">Workshop</a></li>
+                  <ul style="width:420px" class="sub-menu">
+                    <li><a href="../aa/home.html">Architectural Assistantship</a></li>
+                    <li><a href="../ce/home.html">Civil Engineering</a></li>
+                    <li><a href="../cse/home.html">Computer Science &amp; Engineering</a></li>
+                    <li><a href="../ee/home.html">Electrical Engineering</a></li>
+                    <li><a href="../ece/home.html">Electronics & Communications Engg</a></li>
+                    <li><a href="../it/home.html">Information Technology</a></li>
+                    <li><a href="../me/home.html">Mechanical Engineering</a></li>
+                    <li><a href="../pie/home.html">Mechanical Engineering (Production)</a></li>
+                    <li><a href="../pharmacy/home.html">Pharmacy</a></li>
+                    <li><a href="../applied/home.html">Applied Sciences</a></li>
+                    <li><a href="../workshop/home.html">Workshop</a></li>
                   </ul>
                 </li>
                 <li class="has-sub"> 
@@ -218,8 +218,8 @@
                         <p>   The department  is committed to preparing professional Electronics Engineers in a learner-centered academic and professional environment, with the necessary knowledge, skills and attitudes, who will serve the  Industry. This is accomplished by a team of dedicated faculty and professional staff who are committed to providing the best support possible to students.<br/>The institute has well equipped laboratories furnished with machines / equipments as per the requirements of AICTE . Besides equipping students in professional competence, institute gives paramount importance to all round development to student's personality by providing those ample opportunities for participation in games and sports, cultural and other societal activities. Emphasis is also given on development of communication and professional skills, inter-personal skills, organizational ability etc.
                         </p>
                        <div style="width:500px">
-                        <img src="../../assets/images/faculty/manjit_singh.jpg" alt="photo" srcset="">
-                        <figcaption>Er. Manjeet Singh Bhullar<br/> HOD ECE</figcaption>
+                        <img src="../../assets/images/faculty/sprana.jpg" height="160px" width="180px" alt="photo" srcset="">
+                        <figcaption>Er. Sukhwinder Partap Rana<br/> HOD ECE</figcaption>
                        </div>
                       </div>
 
