--- a/departments/aa/faculty.html
+++ b/departments/aa/faculty.html
@@ -361,6 +361,36 @@
                               </div>
                             </div>
                           </div>
+                          <div class="flip-card">
+                            <div class="flip-card-inner">
+                              <div class="flip-card-front">
+                                <img src="../../assets/images/faculty/arunbir.jpeg" alt="Avatar">
+                                <h3>Er. Arunbir Singh</h3>
+                                <h5 style="color:white;">Lecturer</h5>
+                              </div>
+                              <div class="flip-card-back">
+                                <div class="qualification">
+                                    <h3>
+                                        Qualification
+                                    </h3><br/>
+                                    <h5 style="color:white;">B.Tech. Civil Engg.<br/>
+                                    M.Plan. Urban Development</h5>
+                                </div>
+                                <div class="specialization-area">
+                                    <h3>
+                                        Specialization Area
+                                    </h3><br/>
+                                    <h5 style="color:white;">Survey, Structures</h5>
+                                </div>
+                                <div class="contact">
+                                    <a href="mailto:arunbir.singh1992@punjab.gov.in">
+                                        <img src="../../assets/images/email.svg" alt="" 
+                                        srcset="">
+                                    </a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                           <!-- <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
