--- a/departments/ece/faculty.html
+++ b/departments/ece/faculty.html
@@ -115,18 +115,18 @@
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Departments</a>
-                  <ul style="width:320px" class="sub-menu">
-                    <li><a href="../../departments/aa/home.html">Architectural Assistantship</a></li>
-                    <li><a href="../../departments/ce/home.html">Civil Engineering</a></li>
-                    <li><a href="../../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
-                    <li><a href="../../departments/ee/home.html">Electrical Engineering</a></li>
-                    <li><a href="../../departments/ece/home.html">Electronics & Communications Engg</a></li>
-                    <li><a href="../../departments/it/home.html">Information Technology</a></li>
-                    <li><a href="../../departments/me/home.html">Mechanical Engineering</a></li>
-                    <li><a href="../../departments/pie/home.html">Production and Industrial Engineering</a></li>
-                    <li><a href="../../departments/pharmacy/home.html">Pharmacy</a></li>
-                    <li><a href="../../departments/applied/home.html">Applied Sciences</a></li>
-                    <li><a href="../../departments/workshop/home.html">Workshop</a></li>
+                  <ul style="width:420px" class="sub-menu">
+                    <li><a href="../aa/home.html">Architectural Assistantship</a></li>
+                    <li><a href="../ce/home.html">Civil Engineering</a></li>
+                    <li><a href="../cse/home.html">Computer Science &amp; Engineering</a></li>
+                    <li><a href="../ee/home.html">Electrical Engineering</a></li>
+                    <li><a href="../ece/home.html">Electronics & Communications Engg</a></li>
+                    <li><a href="../it/home.html">Information Technology</a></li>
+                    <li><a href="../me/home.html">Mechanical Engineering</a></li>
+                    <li><a href="../pie/home.html">Mechanical Engineering (Production)</a></li>
+                    <li><a href="../pharmacy/home.html">Pharmacy</a></li>
+                    <li><a href="../applied/home.html">Applied Sciences</a></li>
+                    <li><a href="../workshop/home.html">Workshop</a></li>
                   </ul>
                 </li>
                 <li class="has-sub"> 
@@ -212,8 +212,8 @@
                         <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
-                                <img src="../../assets/images/faculty/manjit_singh.jpg" alt="Avatar">
-                                <h3>Er. Manjeet Singh Bhullar</h3>
+                                <img src="../../assets/images/faculty/sprana.jpg" alt="Avatar">
+                                <h3>Er. Sukhwinder Partap Rana</h3>
                                 <h5 style="color:white;">Head of Department</h5>
                               </div>
                               <div class="flip-card-back">
@@ -231,7 +231,7 @@
                                     <h5 style="color:white;">Communication Systems</h5>
                                 </div>
                                 <div class="contact">
-                                    <a href="mailto:manjitsingh.bhullar@punjab.gov.in">
+                                    <a href="mailto:sukhwinder.rana@punjab.gov.in">
                                         <img src="../../assets/images/email.svg" alt="" 
                                         srcset="">
                                     </a>
@@ -272,8 +272,8 @@
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
-                                <img src="../../assets/images/faculty/shifali.jpg" alt="Avatar">
-                                <h3>Er. Shifali Gupta</h3>
+                                <img src="../../assets/images/faculty/jagdip.jpg" alt="Avatar">
+                                <h3>Er. Jagdeep Kaur</h3>
                                 <h5 style="color:white;">Lecturer</h5>
                               </div>
                               <div class="flip-card-back">
@@ -291,7 +291,7 @@
                                     <h5 style="color:white;">Antenna Engineering</h5>
                                 </div>
                                 <div class="contact">
-                                    <a href="mailto:shifali.gupta94@punjab.gov.in">
+                                    <a href="mailto:jagdeep.kaurrai84@punjab.gov.in">
                                         <img src="../../assets/images/email.svg" alt="" 
                                         srcset="">
                                     </a>
@@ -299,38 +299,39 @@
                               </div>
                             </div>
                           </div>
+                          
                     </div>
                     <div class="faculty-profile">
-                        <div class="flip-card">
-                            <div class="flip-card-inner">
-                              <div class="flip-card-front">
-                                <img src="../../assets/images/faculty/suxam.jpg" alt="Avatar">
-                                <h3>Er. Suxam Singla</h3>
-                                <h5 style="color:white;">Lecturer</h5>
-                              </div>
-                              <div class="flip-card-back">
-                                <div class="qualification">
-                                    <h3>
-                                        Qualification
-                                    </h3><br/>
-                                    <h5 style="color:white;">B.Tech.<br/>
-                                    M.Tech.</h5>
-                                </div>
-                                <div class="specialization-area">
-                                    <h3>
-                                        Specialization Area
-                                    </h3><br/>
-                                    <h5 style="color:white;">Antenna Engineering</h5>
-                                </div>
-                                <div class="contact">
-                                    <a href="mailto:suxam.singla92@punjab.gov.in">
-                                        <img src="../../assets/images/email.svg" alt="" 
-                                        srcset="">
-                                    </a>
-                                </div>
-                              </div>
+                      <div class="flip-card">
+                        <div class="flip-card-inner">
+                          <div class="flip-card-front">
+                            <img src="../../assets/images/faculty/shifali.jpg" alt="Avatar">
+                            <h3>Er. Shifali Gupta</h3>
+                            <h5 style="color:white;">Lecturer</h5>
+                          </div>
+                          <div class="flip-card-back">
+                            <div class="qualification">
+                                <h3>
+                                    Qualification
+                                </h3><br/>
+                                <h5 style="color:white;">B.Tech.<br/>
+                                M.Tech.</h5>
+                            </div>
+                            <div class="specialization-area">
+                                <h3>
+                                    Specialization Area
+                                </h3><br/>
+                                <h5 style="color:white;">Antenna Engineering</h5>
+                            </div>
+                            <div class="contact">
+                                <a href="mailto:shifali.gupta94@punjab.gov.in">
+                                    <img src="../../assets/images/email.svg" alt="" 
+                                    srcset="">
+                                </a>
                             </div>
                           </div>
+                        </div>
+                      </div>
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
