ECE Faculty Updated

--- a/departments/ece/faculty.html
+++ b/departments/ece/faculty.html
@@ -299,14 +299,43 @@
                               </div>
                             </div>
                           </div>
-                          
+                          <div class="flip-card">
+                            <div class="flip-card-inner">
+                              <div class="flip-card-front">
+                                <img src="../../assets/images/faculty/shifali.jpg" alt="Avatar">
+                                <h3>Er. Shifali Gupta</h3>
+                                <h5 style="color:white;">Lecturer</h5>
+                              </div>
+                              <div class="flip-card-back">
+                                <div class="qualification">
+                                    <h3>
+                                        Qualification
+                                    </h3><br/>
+                                    <h5 style="color:white;">B.Tech.<br/>
+                                    M.Tech.</h5>
+                                </div>
+                                <div class="specialization-area">
+                                    <h3>
+                                        Specialization Area
+                                    </h3><br/>
+                                    <h5 style="color:white;">Antenna Engineering</h5>
+                                </div>
+                                <div class="contact">
+                                    <a href="mailto:shifali.gupta94@punjab.gov.in">
+                                        <img src="../../assets/images/email.svg" alt="" 
+                                        srcset="">
+                                    </a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                     </div>
                     <div class="faculty-profile">
                       <div class="flip-card">
                         <div class="flip-card-inner">
                           <div class="flip-card-front">
-                            <img src="../../assets/images/faculty/shifali.jpg" alt="Avatar">
-                            <h3>Er. Shifali Gupta</h3>
+                            <img src="../../assets/images/faculty/lakhwinder_kaur.jpeg" alt="Avatar">
+                            <h3>Er. Lakhwinder Kaur Bhullar</h3>
                             <h5 style="color:white;">Lecturer</h5>
                           </div>
                           <div class="flip-card-back">
@@ -321,10 +350,10 @@
                                 <h3>
                                     Specialization Area
                                 </h3><br/>
-                                <h5 style="color:white;">Antenna Engineering</h5>
+                                <h5 style="color:white;">Electronics and Communications</h5>
                             </div>
                             <div class="contact">
-                                <a href="mailto:shifali.gupta94@punjab.gov.in">
+                                <a href="mailto:lakhwinderkaurece@gmail.com">
                                     <img src="../../assets/images/email.svg" alt="" 
                                     srcset="">
                                 </a>
