--- a/departments/applied/faculty.html
+++ b/departments/applied/faculty.html
@@ -112,18 +112,18 @@
                     </li>
                     <li class="has-sub">
                       <a href="javascript:void(0)">Departments</a>
-                      <ul style="width:320px" class="sub-menu">
-                        <li><a href="../../departments/aa/home.html">Architectural Assistantship</a></li>
-                        <li><a href="../../departments/ce/home.html">Civil Engineering</a></li>
-                        <li><a href="../../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
-                        <li><a href="../../departments/ee/home.html">Electrical Engineering</a></li>
-                        <li><a href="../../departments/ece/home.html">Electronics & Communications Engg</a></li>
-                        <li><a href="../../departments/it/home.html">Information Technology</a></li>
-                        <li><a href="../../departments/me/home.html">Mechanical Engineering</a></li>
-                        <li><a href="../../departments/pie/home.html">Production and Industrial Engineering</a></li>
-                        <li><a href="../../departments/pharmacy/home.html">Pharmacy</a></li>
-                        <li><a href="../../departments/applied/home.html">Applied Sciences</a></li>
-                        <li><a href="../../departments/workshop/home.html">Workshop</a></li>
+                      <ul style="width:420px" class="sub-menu">
+                        <li><a href="../aa/home.html">Architectural Assistantship</a></li>
+                        <li><a href="../ce/home.html">Civil Engineering</a></li>
+                        <li><a href="../cse/home.html">Computer Science &amp; Engineering</a></li>
+                        <li><a href="../ee/home.html">Electrical Engineering</a></li>
+                        <li><a href="../ece/home.html">Electronics & Communications Engg</a></li>
+                        <li><a href="../it/home.html">Information Technology</a></li>
+                        <li><a href="../me/home.html">Mechanical Engineering</a></li>
+                        <li><a href="../pie/home.html">Mechanical Engineering (Production)</a></li>
+                        <li><a href="../pharmacy/home.html">Pharmacy</a></li>
+                        <li><a href="../applied/home.html">Applied Sciences</a></li>
+                        <li><a href="../workshop/home.html">Workshop</a></li>
                       </ul>
                     </li>
                     <li class="has-sub"> 
