--- a/departments/cse/contact.html
+++ b/departments/cse/contact.html
@@ -212,7 +212,7 @@
                     <div class="contact-info">
                       
                       <p>
-                          <h5>Er Darshan Singh Dhillon </h5> <br>
+                          <h5>Er. Darshan Singh Dhillon </h5> <br>
                           Head of Department
                           <br/>
                           Mob: 94173-08829
@@ -238,12 +238,12 @@
                        </div>
                        <div class="contact-info">
                         <p>
-                            <h5>Er. Lakhvinder Soni </h5> <br>
+                            <h5>Er. Lakhwinder Soni </h5> <br>
                              Lecturer
                             <br/>
                             Mob: 95925-44887
                             <br/>
-                           Email: <a href="mailto:  "></a>
+                           Email: <a href="mailto:lakhwinder.soni85@punjab.gov.in">lakhwinder.soni85@punjab.gov.in</a>
                            </p>
         
                        </div>
