--- a/departments/cse/faculty.html
+++ b/departments/cse/faculty.html
@@ -303,8 +303,8 @@
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
-                                <img src="../../assets/images/faculty/soni.jpg" alt="Avatar">
-                                <h3>Er. Lakhvinder Soni</h3>
+                                <img src="../../assets/images/faculty/lakhwinder_soni.jpeg" alt="Avatar">
+                                <h3>Er. Lakhwinder Soni</h3>
                                 <h5 style="color:white;">Lecturer</h5>
                               </div>
                               <div class="flip-card-back">
@@ -321,7 +321,7 @@
                                     <h5 style="color:white;">Object Oriented Programming</h5>
                                 </div>
                                 <div class="contact">
-                                    <a href="mailto:beant.singh1992@punjab.gov.in">
+                                    <a href="mailto:lakhwinder.soni85@punjab.gov.in">
                                         <img src="../../assets/images/email.svg" alt="" 
                                         srcset="">
                                     </a>
