--- a/departments/workshop/home.html
+++ b/departments/workshop/home.html
@@ -115,18 +115,18 @@
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Departments</a>
-                  <ul style="width:320px" class="sub-menu">
-                    <li><a href="../../departments/aa/home.html">Architectural Assistantship</a></li>
-                    <li><a href="../../departments/ce/home.html">Civil Engineering</a></li>
-                    <li><a href="../../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
-                    <li><a href="../../departments/ee/home.html">Electrical Engineering</a></li>
-                    <li><a href="../../departments/ece/home.html">Electronics & Communications Engg</a></li>
-                    <li><a href="../../departments/it/home.html">Information Technology</a></li>
-                    <li><a href="../../departments/me/home.html">Mechanical Engineering</a></li>
-                    <li><a href="../../departments/pie/home.html">Production and Industrial Engineering</a></li>
-                    <li><a href="../../departments/pharmacy/home.html">Pharmacy</a></li>
-                    <li><a href="../../departments/applied/home.html">Applied Sciences</a></li>
-                    <li><a href="../../departments/workshop/home.html">Workshop</a></li>
+                  <ul style="width:420px" class="sub-menu">
+                    <li><a href="../aa/home.html">Architectural Assistantship</a></li>
+                    <li><a href="../ce/home.html">Civil Engineering</a></li>
+                    <li><a href="../cse/home.html">Computer Science &amp; Engineering</a></li>
+                    <li><a href="../ee/home.html">Electrical Engineering</a></li>
+                    <li><a href="../ece/home.html">Electronics & Communications Engg</a></li>
+                    <li><a href="../it/home.html">Information Technology</a></li>
+                    <li><a href="../me/home.html">Mechanical Engineering</a></li>
+                    <li><a href="../pie/home.html">Mechanical Engineering (Production)</a></li>
+                    <li><a href="../pharmacy/home.html">Pharmacy</a></li>
+                    <li><a href="../applied/home.html">Applied Sciences</a></li>
+                    <li><a href="../workshop/home.html">Workshop</a></li>
                   </ul>
                 </li>
                 <li class="has-sub"> 
@@ -215,7 +215,7 @@
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/gurjit_singh.jpg" alt="Avatar">
                                 <h3>Mr. Gurjit Singh</h3>
-                                <h5 style="color:white;">Foremen Instr(Workshop Incharge)</h5>
+                                <h5 style="color:white;">Foremen Instructor <br/>(Workshop Incharge)</h5>
                               </div>
                               <div class="flip-card-back">
                                 <div class="qualification">
@@ -239,7 +239,7 @@
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/balkar_singh.jpg" alt="Avatar">
                                 <h3>Mr. Balkar Singh</h3>
-                                <h5 style="color:white;">W/Shop Instructor</h5>
+                                <h5 style="color:white;">Foreman Instructor</h5>
                               </div>
                               <div class="flip-card-back">
                                 <div class="qualification">
@@ -258,7 +258,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="flip-card">
+                          <!-- <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/narinder_singh.jpg" alt="Avatar">
@@ -281,10 +281,9 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
-                    </div>
-                    <div class="faculty-profile">
-                        <div class="flip-card">
+                          </div> -->
+                    
+                        <!-- <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/bhola_singh.jpg" alt="Avatar">
@@ -307,7 +306,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
