--- a/facilities/hostel.html
+++ b/facilities/hostel.html
@@ -115,7 +115,7 @@
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Departments</a>
-                  <ul style="width:320px" class="sub-menu">
+                  <ul style="width:420px" class="sub-menu">
                     <li><a href="../departments/aa/home.html">Architectural Assistantship</a></li>
                     <li><a href="../departments/ce/home.html">Civil Engineering</a></li>
                     <li><a href="../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
@@ -123,7 +123,7 @@
                     <li><a href="../departments/ece/home.html">Electronics & Communications Engg</a></li>
                     <li><a href="../departments/it/home.html">Information Technology</a></li>
                     <li><a href="../departments/me/home.html">Mechanical Engineering</a></li>
-                    <li><a href="../departments/pie/home.html">Production and Industrial Engineering</a></li>
+                    <li><a href="../departments/pie/home.html">Mechanical Engineering(Production)</a></li>
                     <li><a href="../departments/pharmacy/home.html">Pharmacy</a></li>
                     <li><a href="../departments/applied/home.html">Applied Sciences</a></li>
                     <li><a href="../departments/workshop/home.html">Workshop</a></li>
