--- a/departments/me/faculty.html
+++ b/departments/me/faculty.html
@@ -301,7 +301,7 @@
                           </div>
                     </div>
                     <div class="faculty-profile">
-                        <div class="flip-card">
+                        <!-- <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/munish.jpg" alt="Avatar">
@@ -330,7 +330,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
@@ -391,38 +391,39 @@
                               </div>
                             </div>
                           </div>
-                    </div>
-                    <div class="faculty-profile">
-                      <div class="flip-card">
-                          <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                              <img src="../../assets/images/faculty/jasdeep.jpg" alt="Avatar">
-                              <h3>Er. Jasdeep Singh</h3>
-                              <h5 style="color:white;">Lecturer</h5>
-                            </div>
-                            <div class="flip-card-back">
-                              <div class="qualification">
-                                  <h3>
-                                      Qualification
-                                  </h3><br/>
-                                  <h5 style="color:white;">B.Tech.<br/>
-                                  M.Tech.</h5>
+                          <div class="flip-card">
+                            <div class="flip-card-inner">
+                              <div class="flip-card-front">
+                                <img src="../../assets/images/faculty/jasdeep.jpg" alt="Avatar">
+                                <h3>Er. Jasdeep Singh</h3>
+                                <h5 style="color:white;">Lecturer</h5>
                               </div>
-                              <div class="specialization-area">
-                                  <h3>
-                                      Specialization Area
-                                  </h3><br/>
-                                  <h5 style="color:white;"></h5>
-                              </div>
-                              <div class="contact">
-                                  <a href="mailto:jasdeep.singh1992@pujab.gov.in">
-                                      <img src="../../assets/images/email.svg" alt="" 
-                                      srcset="">
-                                  </a>
+                              <div class="flip-card-back">
+                                <div class="qualification">
+                                    <h3>
+                                        Qualification
+                                    </h3><br/>
+                                    <h5 style="color:white;">B.Tech.<br/>
+                                    M.Tech.</h5>
+                                </div>
+                                <div class="specialization-area">
+                                    <h3>
+                                        Specialization Area
+                                    </h3><br/>
+                                    <h5 style="color:white;"></h5>
+                                </div>
+                                <div class="contact">
+                                    <a href="mailto:jasdeep.singh1992@pujab.gov.in">
+                                        <img src="../../assets/images/email.svg" alt="" 
+                                        srcset="">
+                                    </a>
+                                </div>
                               </div>
                             </div>
                           </div>
-                        </div>
+                    </div>
+                    <div class="faculty-profile">
+                      
                         <div class="flip-card">
                           <div class="flip-card-inner">
                             <div class="flip-card-front">
@@ -446,6 +447,36 @@
                               </div>
                               <div class="contact">
                                   <a href="mailto:bharat.bansal05@punjab.gov.in">
+                                      <img src="../../assets/images/email.svg" alt="" 
+                                      srcset="">
+                                  </a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="flip-card">
+                          <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                              <img src="../../assets/images/faculty/rajvir.jpeg" alt="Avatar">
+                              <h3>Er. Rajvir Singh</h3>
+                              <h5 style="color:white;">Lecturer</h5>
+                            </div>
+                            <div class="flip-card-back">
+                              <div class="qualification">
+                                  <h3>
+                                      Qualification
+                                  </h3><br/>
+                                  <h5 style="color:white;">B.Tech.
+                                  </h5>
+                              </div>
+                              <div class="specialization-area">
+                                  <h3>
+                                      Specialization Area
+                                  </h3><br/>
+                                  <h5 style="color:white;">Mechanical Engg.</h5>
+                              </div>
+                              <div class="contact">
+                                  <a href="mailto:sran98031@gmail.com">
                                       <img src="../../assets/images/email.svg" alt="" 
                                       srcset="">
                                   </a>
