--- a/facilities/src_clubs/home.html
+++ b/facilities/src_clubs/home.html
@@ -115,7 +115,7 @@
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Departments</a>
-                  <ul style="width:320px" class="sub-menu">
+                  <ul style="width:420px" class="sub-menu">
                     <li><a href="../../departments/aa/home.html">Architectural Assistantship</a></li>
                     <li><a href="../../departments/ce/home.html">Civil Engineering</a></li>
                     <li><a href="../../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
@@ -123,7 +123,7 @@
                     <li><a href="../../departments/ece/home.html">Electronics & Communications Engg</a></li>
                     <li><a href="../../departments/it/home.html">Information Technology</a></li>
                     <li><a href="../../departments/me/home.html">Mechanical Engineering</a></li>
-                    <li><a href="../../departments/pie/home.html">Production and Industrial Engineering</a></li>
+                    <li><a href="../../departments/pie/home.html">Mechanical Engineering (Production)</a></li>
                     <li><a href="../../departments/pharmacy/home.html">Pharmacy</a></li>
                     <li><a href="../../departments/applied/home.html">Applied Sciences</a></li>
                     <li><a href="../../departments/workshop/home.html">Workshop</a></li>
@@ -366,9 +366,9 @@
                                     Lecturer (Maths) <br>
                                     email: <a href="mailto:asha.rgoyal70@punjab.gov.in">asha.rgoyal70@punjab.gov.in</a>
                                     <br><br>
-                                    Ms. Suxam Singla<br>
+                                    <!-- Ms. Suxam Singla<br>
                                     Lecturer (Electronics &amp; Communication Engineering)<br>
-                                    email: <a href="mailto:suxam.singla92@punjab.gov.in">suxam.singla92@punjab.gov.in</a>
+                                    email: <a href="mailto:suxam.singla92@punjab.gov.in">suxam.singla92@punjab.gov.in</a> -->
                                 </p>
                             </div>
                             <div class="club-image">
@@ -390,9 +390,9 @@
                                     Sr. Lect. (Mechanical Engineering) <br>
                                     email: <a href="mailto:harjeev.khanna@punjab.gov.in">harjeev.khanna@punjab.gov.in</a>
                                     <br><br>
-                                    Dr. Munish Kumar<br>
+                                    <!-- Dr. Munish Kumar<br>
                                     Lecturer (Mechanical Engineering)<br>
-                                    email: <a href="mailto:munish.kumar84@punjab.gov.in">munish.kumar84@punjab.gov.in</a>
+                                    email: <a href="mailto:munish.kumar84@punjab.gov.in">munish.kumar84@punjab.gov.in</a> -->
                                 </p>
                             </div>
                             
