--- a/sub_header/placements.html
+++ b/sub_header/placements.html
@@ -115,7 +115,7 @@
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Departments</a>
-                  <ul style="width:320px" class="sub-menu">
+                  <ul style="width:420px" class="sub-menu">
                     <li><a href="../departments/aa/home.html">Architectural Assistantship</a></li>
                     <li><a href="../departments/ce/home.html">Civil Engineering</a></li>
                     <li><a href="../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
@@ -123,7 +123,7 @@
                     <li><a href="../departments/ece/home.html">Electronics & Communications Engg</a></li>
                     <li><a href="../departments/it/home.html">Information Technology</a></li>
                     <li><a href="../departments/me/home.html">Mechanical Engineering</a></li>
-                    <li><a href="../departments/pie/home.html">Production and Industrial Engineering</a></li>
+                    <li><a href="../departments/pie/home.html">Mechcanical Engineering (Production)</a></li>
                     <li><a href="../departments/pharmacy/home.html">Pharmacy</a></li>
                     <li><a href="../departments/applied/home.html">Applied Sciences</a></li>
                     <li><a href="../departments/workshop/home.html">Workshop</a></li>
@@ -154,9 +154,14 @@
                     <li class="has-sub">
                       <a href="javascript:void(0)">Important Links</a>
                       <ul  style="width:350px" class="sub-menu">
+                        <li><a href="http://www.pgrkam.com/" target="_blank">Punjab Ghar Ghar Rozgar</a></li>
                         <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
-                        <li><a href="http://www.scholarships.punjab.gov.in/Default.aspx" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
-                        </ul>
+                        <li><a href="https://scholarships.punjab.gov.in/" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
+                        <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
+                        <li><a href="../help_desk/icc.html">Internal Complaint Committee</a></li>
+                        <!--<li><a href="help_desk/aicte_feedback.html">AICTE Feedback Facility</a></li>-->
+                        <li><a href="../help_desk/scst.html">Anti-discrimination cell</a></li>
+                      </ul>
                         </li>
                         </ul>
                         <a class="menu-trigger">
