Academic Calendar Updated

--- a/departments/applied/contact.html
+++ b/departments/applied/contact.html
@@ -281,7 +281,7 @@
                      </div>
                      <div class="contact-info">
                       <p>
-                          <h5>Ms. Namita Bansal </h5> <br>
+                          <h5>Dr. Namita Bansal </h5> <br>
                           Lecturer Physics
                           <br/>
                           Mob: 81465-46571
