--- a/departments/applied/faculty.html
+++ b/departments/applied/faculty.html
@@ -388,7 +388,7 @@
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/namita.jpeg" alt="Avatar">
-                                <h3>Ms. Namita Bansal</h3>
+                                <h3>Dr. Namita Bansal</h3>
                                 <h5 style="color:white;">Lecturer Physics</h5>
                               </div>
                               <div class="flip-card-back">
