--- a/academics_admissions/academic_calendar.html
+++ b/academics_admissions/academic_calendar.html
@@ -201,7 +201,11 @@
                      <h4 class="block-dept">Academic Calender</h4>
                      <p> 
                       <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
-                      <a href="../assets/files/Academic-Calendar_July23.PDF" target="_blank">Academic Calender For 2023-24 (Odd Semester)</a> 
+                      <a href="../assets/files/Circular-1518.PDF" target="_blank">Academic Calender For 2023-24 (1st Sem/ 1st Year)</a> 
+                  </p> <br/><br>
+                     <p> 
+                      <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
+                      <a href="../assets/files/Academic-Calendar_July23.PDF" target="_blank">Academic Calender For 2023-24 (Odd Semester- Exceot 1st year/1st Sem)</a> 
                   </p> <br/><br>
                     <p> 
                       <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
