--- a/index.html
+++ b/index.html
@@ -229,10 +229,16 @@ https://templatemo.com/tm-569-edu-meeting
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
                       <li>
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/Circular-1518.PDF" target="_blank">
+                            Academic Calendar- 2023-24 (1st Year)
+                          </a>
+                        </li>
+                      <li>
+                      <!-- <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/bid_add_rule_merge.pdf" target="_blank">
                           Rent Contract of Canteen Cum TuckShop for Year 2023-24
                        </a>
-                     </li>
+                     </li> -->
                       <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://eakadamik.in/psbte_2023/" target="_blank">
                             Admissions 2023-24
