Offline counselling notice

--- a/index.html
+++ b/index.html
@@ -229,6 +229,11 @@ https://templatemo.com/tm-569-edu-meeting
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
                       <li>
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/add_direct_admission_2023.jpeg" target="_blank">
+                            Offline Counselling for Admission (2023-24)
+                          </a>
+                        </li>
+                      <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/Circular-1518.PDF" target="_blank">
                             Academic Calendar- 2023-24 (1st Year)
                           </a>
@@ -239,7 +244,7 @@ https://templatemo.com/tm-569-edu-meeting
                           Rent Contract of Canteen Cum TuckShop for Year 2023-24
                        </a>
                      </li> -->
-                      <li>
+                      <!-- <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://eakadamik.in/psbte_2023/" target="_blank">
                             Admissions 2023-24
                           </a>
@@ -248,7 +253,7 @@ https://templatemo.com/tm-569-edu-meeting
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://forms.gle/srv9j81v1mLuXVwj6" target="_blank">
                             Enquiry Proforma for Admissions 2023-24
                           </a>
-                        </li>
+                        </li> -->
                     <!-- <li>
                       <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/letter-APF-May2023.PDF" target="_blank">
                           Regarding End Semester Examination May 2023
