--- a/departments/it/home.html
+++ b/departments/it/home.html
@@ -230,8 +230,8 @@
                           I encourage you to make the most of your time here and take advantage of the various resources and facilities that our department offers. I wish all the students best in academic endeavors and look forward to seeing you succeed in your careers.
                         </p>
                        <div>
-                        <img src="../../assets/images/faculty/magan.jpg" alt="photo" srcset="">
-                        <figcaption>Er. Magandeep Kaur <br/> Officer Incharge IT.</figcaption>
+                        <img src="../../assets/images/faculty/manjit_singh.jpg" alt="photo" srcset="">
+                        <figcaption>Er. Manjeet Singh Bhullar <br/> HoD</figcaption>
                        </div>
                       </div>
 
