--- a/departments/pie/home.html
+++ b/departments/pie/home.html
@@ -221,8 +221,8 @@
                           I encourage all students to take advantage of the opportunities available to them and make the most of their time at our college. With hard work, dedication, and perseverance, I am confident that each and every one of you will achieve great success in your career and personal life.
                         </p>
                        <div>
-                        <img src="../../assets/images/faculty/rupinder.jpg" alt="photo" srcset="">
-                        <figcaption>Dr. Rupinder Singh Chahal <br/> Officer In-Charge</figcaption>
+                        <img src="../../assets/images/faculty/sarabjit.jpg" alt="photo" srcset="">
+                        <figcaption>Er. Sarabjit Kaur <br/> HoD</figcaption>
                        </div>
                       </div>
 
