--- a/facilities/src_clubs/home.html
+++ b/facilities/src_clubs/home.html
@@ -390,9 +390,9 @@
                                     Sr. Lect. (Mechanical Engineering) <br>
                                     email: <a href="mailto:harjeev.khanna@punjab.gov.in">harjeev.khanna@punjab.gov.in</a>
                                     <br><br>
-                                    <!-- Dr. Munish Kumar<br>
+                                    Mr. Rajvir Singh<br>
                                     Lecturer (Mechanical Engineering)<br>
-                                    email: <a href="mailto:munish.kumar84@punjab.gov.in">munish.kumar84@punjab.gov.in</a> -->
+                                    email: <a href="mailto:sran98031@gmail.com">sran98031@gmail.com</a>
                                 </p>
                             </div>
                             
