--- a/departments/workshop/faculty.html
+++ b/departments/workshop/faculty.html
@@ -331,7 +331,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="flip-card">
+                          <!-- <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/mohan_lal.jpg" alt="Avatar">
@@ -354,7 +354,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                     </div>
                 </div>
               </div>
