--- a/affiliations/pci/home.html
+++ b/affiliations/pci/home.html
@@ -202,6 +202,11 @@
                   </div> -->
                 </div>
                 <div class="down-content">
+                  <h4>PCI SIF</h4>
+                  <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
+                  <a href="../../assets/files/PCI_SIF_2024-25.pdf" target="_blank">PCI SIF 2024-25 </a> </p><br/><br/>
+                </div>
+                <div class="down-content">
                   <h4>PCI Approvals For Last years</h4>
                    <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
                   <a href="../../assets/files/PCI_EOA_2023-24.pdf" target="_blank">PCI 2023-24 Approval Letter </a> </p><br/><br/>
