--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ https://templatemo.com/tm-569-edu-meeting
                   <div>
                     <p style="margin: auto;
                     padding-bottom:15px; padding-top: 5px; border-bottom:1px solid gray">
-                      <a href="help_desk/pms_center.html" style="font-size:18px;">⮕ PMS Facilitation Center</a>
+                      <a href="help_desk/pms_center.html" style="font-size:18px;">⮕ Feedback Facility for <br/>Students and Faculty on AICTE Web Portal</a>
                     </p>
                     <p style="margin: auto;
                     padding-bottom:15px; padding-top: 5px; border-bottom:1px solid gray">
