--- a/affiliations/pci/home.html
+++ b/affiliations/pci/home.html
@@ -208,6 +208,8 @@
                 </div>
                 <div class="down-content">
                   <h4>PCI Approvals For Last years</h4>
+                  <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
+                  <a href="../../assets/files/PCI_EOA_2024-26.pdf" target="_blank">PCI 2024-26 Approval Letter </a> </p><br/><br/>
                    <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
                   <a href="../../assets/files/PCI_EOA_2023-24.pdf" target="_blank">PCI 2023-24 Approval Letter </a> </p><br/><br/>
                   <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
