--- a/affiliations/aicte/home.html
+++ b/affiliations/aicte/home.html
@@ -204,6 +204,8 @@
                 <div class="down-content">
                   <h4>AICTE EoA</h4>
                   <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
+                    <a href="../../assets/files/AICTE_EOA_Report_2024-25.PDF" target="_blank">EOA 2024-25 Approval Letter </a> </p><br/>
+                  <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
                     <a href="../../assets/files/eoa2023_aicte.PDF" target="_blank">EOA 2023-24 Approval Letter </a> </p><br/>
                   <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
                   <a href="../../assets/files/eoa2022.pdf" target="_blank">EOA 2022-23 Approval Letter </a> </p><br/>
