--- a/academics_admissions/admission_eligibility.html
+++ b/academics_admissions/admission_eligibility.html
@@ -202,9 +202,10 @@
                     <div class="left-body">
                         <h4 class="block-dept">Admission Eligibility for Diploma Courses</h4>
                      <p>Admission to the various streams of Engineering/Technology for three years diploma courses is made through centralized counselling conducted by Punjab State Board of Technical Education & Industrial Training, Chandigarh. <br><br>
-                    <a href="http://www.punjabteched.net/Admissions-2023/Noti-Diploma_2023.pdf" target="_blank">→ Eligibility for Admission to First Year of Diploma Level Engineering Courses (3 Year Program- Semester System)</a><br><br>
-                    <a href="http://www.punjabteched.net/Admissions-2023/Noti-LEET_2023.pdf" target="_blank">→ Eligibility for Admission to Lateral Entry of Diploma Level Engineering Courses (Entry in 2nd Year of 3 Year Program- Semester System)</a><br><br>
-                    <a href="http://www.punjabteched.net/Admissions-2023/Noti-Pharmacy_2023.pdf" target="_blank">→ Eligibility for Admission to First Year of Diploma Level Pharmacy Courses (2 Year Course- Annual System)</a><br><br>
+                    <a href="http://www.punjabteched.net/Admissions-2024/Diploma-Notif-2024.pdf" target="_blank">→ Eligibility for Admission to First Year of Diploma Level Engineering Courses (3 Year Program- Semester System)</a><br><br>
+                    <a href="http://www.punjabteched.net/Admissions-2024/Architecture-Notif-2024.pdf" target="_blank">→ Eligibility for Admission to First Year of Diploma in Architecture (3 Year Program- Semester System)</a><br><br>
+                    <a href="http://www.punjabteched.net/Admissions-2024/Diploma-LEET-Notif-2024.pdf" target="_blank">→ Eligibility for Admission to Lateral Entry of Diploma Level Engineering Courses (Entry in 2nd Year of 3 Year Program- Semester System)</a><br><br>
+                    <a href="http://www.punjabteched.net/Admissions-2024/Pharmacy-Notif-2024.pdf" target="_blank">→ Eligibility for Admission to First Year of Diploma Level Pharmacy Courses (2 Year Course- Annual System)</a><br><br>
 
                       <b>MEDICAL TEST</b>
                       <br/>
@@ -216,7 +217,7 @@
                     </div>
                     <div class="right-body">
                         <!-- <h4 style="text-align:center">Admissions 2023-24 <br> For more details kindly check <a href="http://www.punjabteched.com" target="_blank">www.punjabteched.com</a></h4> -->
-                        <img src="../assets/images/admission_23_24.png" alt="" srcset="">
+                        <img src="../assets/images/admission_24_25.png" alt="" srcset="">
                     </div>
                      
                    
