--- a/departments/aa/faculty.html
+++ b/departments/aa/faculty.html
@@ -211,7 +211,7 @@
                 <div class="down-content">
                     <h4 class="dept-block">Faculty &amp; Non-Teaching Members</h4>
                     <div class="faculty-profile">
-                        <div class="flip-card">
+                        <!-- <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/parminderkaur.jpg" alt="Avatar">
@@ -239,7 +239,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
