--- a/departments/aa/home.html
+++ b/departments/aa/home.html
@@ -218,8 +218,8 @@
                       <div class="hod-message">
                         <p>I feel proud to be leading a team of intellectuals always striving to strengthen the diploma in architecture year by year. They are the faculty who are skillful and resourceful in various domains to take up challenges and deliver creative qualitative knowledge base.The responsibility as faculty is to adopt an approach that builds up confidence, make them creative, innovative, and strengthen the entrepreneurial skills of students. <br> Students of today are the future Architects and Planners who need to take up challenges and survive in a competitive and technologically advanced environment.</p>
                        <div>
-                        <img src="../../assets/images/faculty/parminderkaur.jpg" alt="" srcset="">
-                        <figcaption>Parminder Kaur <br/> HOD Arch. Asstt.</figcaption>
+                        <img src="../../assets/images/faculty/archna.jpg" alt="" srcset="">
+                        <figcaption>Archana Singla <br/> O/I Arch. Asstt.</figcaption>
                        </div>
                       </div>
 
