--- a/help_desk/icc.html
+++ b/help_desk/icc.html
@@ -268,7 +268,7 @@
                                 <tr>
                                     <td>5.</td>
                                     <td>Mr. Charanjeet Singh Tiwana</td>
-                                    <td>Senior Assistant</td>
+                                    <td>Superintendent</td>
                                     <td>Member</td>
                                     <td><a href="mailto:cs.tiwana@punjab.gov.in">cs.tiwana@punjab.gov.in</a></td>
                                     </tr>
@@ -288,22 +288,22 @@
                                             </tr>
                                             <tr>
                                                 <td>8.</td>
-                                                <td>Asmi</td>
-                                                <td>Student(511/20)</td>
+                                                <td>Meenal</td>
+                                                <td>Student(539/22)</td>
                                                 <td>Member</td>
                                                 <td>---</td>
                                                 </tr>
                                                 <tr>
                                                     <td>9.</td>
-                                                    <td>Manpreet Kaur</td>
-                                                    <td>Student(715/20)</td>
+                                                    <td>Gurpreet Kaur</td>
+                                                    <td>Student(710/20)</td>
                                                     <td>Member</td>
                                                     <td>---</td>
                                                     </tr>
                                                     <tr>
                                                         <td>10.</td>
-                                                        <td>Ritu Rani</td>
-                                                        <td>Student(22/20)</td>
+                                                        <td>Praveen Kaur</td>
+                                                        <td>Student(318/23)</td>
                                                         <td>Member</td>
                                                         <td>---</td>
                                                         </tr>
