--- a/academics_admissions/academic_calendar.html
+++ b/academics_admissions/academic_calendar.html
@@ -199,6 +199,11 @@
                 <div class="down-content">
                    
                      <h4 class="block-dept">Academic Calender</h4>
+                     
+                     <p> 
+                      <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
+                      <a href="http://www.punjabteched.net/news/Letter-Academic-Calender-2024-25.PDF" target="_blank">Academic Calender For 2024-25 (Odd Semester)</a> 
+                  </p> <br/><br>
                      <p> 
                       <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
                       <a href="../assets/files/Circular-1518.PDF" target="_blank">Academic Calender For 2023-24 (1st Sem/ 1st Year)</a> 
