--- a/academics_admissions/antiragging.html
+++ b/academics_admissions/antiragging.html
@@ -272,7 +272,7 @@
                                         Deputy Police Captain (H)
                                     </td>
                                     <td>
-                                        SSP Batdinda Office Representative
+                                        SSP Bathinda Office Representative
                                     </td>
                                     <td>
                                         Member
@@ -333,27 +333,26 @@
                                         Member
                                     </td>
                                     <td>
-                                        9417147708 <br>
-                                        <a href="mailto:bhullarmanjitsingh@gmail.com" target="_blank">bhullarmanjitsingh@gmail.com</a>
+                                        9501100063 <br>
+                                        <a href="mailto:sp_rana72@yahoo.com" target="_blank">sp_rana72@yahoo.com</a>
                                     </td>
                                   </tr>
                               
-                              <tr><td>7</td><td>Rajan Sharma</td><td>Student<br>546/20 <br>CSE (3rd Year)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>8</td><td>Harmanjeet Singh</td><td>Student<br>620/20<br>ME (3rd Year)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>9</td><td>Sandeep Garg</td><td>Student<br>723/20 <br>IT (3rd Year)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>10</td><td>Lavesh Kumar</td><td>Student<br>941/20 <br>EE (3rd Year)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>11</td><td>Gaurav</td><td>Student<br>817/20 <br>Civil (2nd Year)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>12</td><td>Gurinder Singh</td><td>Student<br>707/21 <br>IT (2nd Year))</td><td>Member</td><td>---</td></tr>
-                              <tr><td>13</td><td>Bhavndeep Singh</td><td>Student<br>511/21 <br>CSE (2nd Year))</td><td>Member</td><td>---</td></tr>
-                              <tr><td>14</td><td>Parmdev</td><td>Student<br>316/21 <br>D.Pharmacy (2nd Year)</td><td>Member</td><td>---</td></tr>
-                              <tr><td>15</td><td>Komalpreet Singh</td><td>Student<br>626/21 <br>ME (2nd Year))</td><td>Member</td><td>---</td></tr>
-                              <tr><td>16</td><td>Prabhnoor Singh Gill</td><td>Student<br>940/21 <br>EE (2nd Year))</td><td>Member</td><td>---</td></tr>
-                              <tr><td>17</td><td>Pankaj Kumar</td><td>Student<br>19/22 <br>ECE (1st Year))</td><td>Member</td><td>---</td></tr>
-                              <tr><td>18</td><td>Himanshu</td><td>Student<br>622/22 <br>ME (1st Year))</td><td>Member</td><td>---</td></tr>
-                              <tr><td>19</td><td>Dalvir Mehta</td><td>Student<br>911/22 <br>EE (1st Year))</td><td>Member</td><td>---</td></tr>
-                              <tr><td>20</td><td>Yishu Jajoria</td><td>Student<br>731/21 <br>IT (1st Year))</td><td>Member</td><td>---</td></tr>
-                              <tr><td>21</td><td>Dakshveer Singh</td><td>Student<br>311/21 <br>D.Pharmacy (1st Year))</td><td>Member</td><td>---</td></tr>
-
+                              <tr><td>1</td><td>Sushank Kumar Mishra</td><td>Student<br>556/22 <br>CSE (2nd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>2</td><td>Nilesh Kumar</td><td>Student<br>645/22 <br>ME (2nd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>3</td><td>Jinat</td><td>Student<br>718/22 <br>IT (2nd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>4</td><td>Raj Kumar</td><td>Student<br>947/22 <br>EE (2nd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>5</td><td>Gaurav</td><td>Student<br>817/21 <br>Civil Engg. (3rd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>6</td><td>Gurinder Singh</td><td>Student<br>707/21 <br>IT (3rd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>6</td><td>Bhavandeep Singh</td><td>Student<br>511/21 <br>CSE (3rd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>6</td><td>Sukhwinder Singh</td><td>Student<br>350/22 <br>Pharmacy (2nd Year)</td><td>Member</td><td>---</td></tr>
+                              <tr><td>15</td><td>Komalpreet Singh</td><td>Student<br>626/21 <br>ME (3rd Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>16</td><td>Prabhnoor Singh Gill</td><td>Student<br>940/21 <br>EE (3rd Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>17</td><td>Pankaj Kumar</td><td>Student<br>19/22 <br>ECE (3rd Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>18</td><td>Himanshu</td><td>Student<br>622/22 <br>ME (3rd Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>19</td><td>Dalvir Mehta</td><td>Student<br>911/22 <br>EE (3rd Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>20</td><td>Yishu Jajoria</td><td>Student<br>731/22 <br>IT (2nd Year))</td><td>Member</td><td>---</td></tr>
+                              <tr><td>21</td><td>Dakshveer Singh</td><td>Student<br>311/21 <br>D.Pharmacy (2nd Year))</td><td>Member</td><td>---</td></tr>
                             </tbody>
                           </table>
                      </div>
