--- a/affiliations/coa/home.html
+++ b/affiliations/coa/home.html
@@ -204,6 +204,9 @@
                 <div class="down-content">
                   <h4>Council Of Architecture Extension of Approval(EoA) For Last years</h4>
                   <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
+                    <a href="../../assets/files/COA_2024-25.pdf" target="_blank">CoA 2024-25 Approval Letter </a> </p>
+                    <br/>
+                  <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
                     <a href="../../assets/files/COA_2023-24.pdf" target="_blank">CoA 2023-24 Approval Letter </a> </p>
                     <br/>
                     <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
