--- a/index.html
+++ b/index.html
@@ -229,13 +229,18 @@ https://templatemo.com/tm-569-edu-meeting
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
                      <li>
-                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.punjabteched.com/" target="_blank">
-                          Last Date for Admissions 2023-24 - extended
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://eakadamik.com/psbte_2024/" target="_blank">
+                          PSBTE Registration for Admissions (2024-25) to Diploma Courses
                        </a>
-                     </li>
+                     </li> 
+                     <li>
+                      <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://forms.gle/YQnNZjtLGbXK5Ajr7/" target="_blank">
+                        Inquiry Proforma for Admissions (2024-25) to Diploma Courses
+                     </a>
+                   </li>
                      <li>
                       <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://scholarships.gov.in/" target="_blank">
-                        National Scholarship Portal is open for application submission for AY 2023-24
+                        National Scholarship Portal is open for application submission for AY 2024-25
                      </a>
                    </li>
                     
@@ -1123,18 +1128,18 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="col-lg-12">
               <div class="item">
                 <h3>Admission for Diploma In Engg. & Architecture Trades</h3>
-                <p>Admissions for Session 2023-24 for Diploma in Engg. & Architecture Program at Government Polytechnic College, Bathinda will be made through Punjab State Board of Technical Education.</p>
+                <p>Admissions for Session 2024-25 for Diploma in Engg. & Architecture Program at Government Polytechnic College, Bathinda will be made through Punjab State Board of Technical Education. Kindly click below to register.</p>
                 <div class="main-button-red">
-                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Keep Visiting</a></div>
+                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Register Now</a></div>
               </div>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="item">
                 <h3>Admission for D. Pharmacy</h3>
-                <p>Admissions for Session 2023-24 for Diploma in Pharmacy Program at Government Polytechnic College, Bathinda will be made through Punjab State Board of Technical Education.</p>
+                <p>Admissions for Session 2024-25 for Diploma in Pharmacy Program at Government Polytechnic College, Bathinda will be made through Punjab State Board of Technical Education. Kindly click below to register.</p>
                 <div class="main-button-yellow">
-                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Keep Visiting</a></div>
+                  <div class="scroll-to-section"><a target="_blank" href="http://www.punjabteched.com/">Register Now</a></div>
               </div>
               </div>
             </div>
