--- a/departments/ece/contact.html
+++ b/departments/ece/contact.html
@@ -253,7 +253,7 @@
                           <br/>
                           Mob: 81469-68681
                           <br/>
-                         Email: <a href="mailto:lakhwinderkaurece@gmail.com">lakhwinderkaurece@gmail.com</a>
+                         Email: <a href="mailto:lakhwinder.kaur2916@punjab.gov.in">lakhwinder.kaur2916@punjab.gov.in</a>
                          </p>
 
                      </div>
